# BaiduEncryptSync

./: AUTO_UPLOAD_README.md  DECRYPT_README.md  DOCKER_README.md  Dockerfile  ENCRYPTION_README.md  FNOS_README.md  README.md  decrypt_files.py  decrypt_tool.bat  decrypt_tool.sh  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
config/: config.yaml
modules/: auth.py  crypto_utils.py  upload_new.py
